clang/test/BSC/Negative/InitAnalysis/init-builtin-assume-init.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test __builtin_assume_initialized: negative cases — use before call,
// use on wrong path. Uses &_Mut in _Safe zones.

_Safe void use_int(int x);

struct Pair { int a; int b; };
_Safe void use_pair(struct Pair p);

// Use before call → error.
_Safe void test_use_before(void) {
    int x;
    use_int(x); // expected-error {{use of uninitialized value: `x`}}
    __builtin_assume_initialized(&_Mut x);
}

// Use on wrong path: builtin only on one branch → error at merge.
_Safe void test_branch_one(int cond) {
    int x;
    if (cond) {
        __builtin_assume_initialized(&_Mut x);
    }
    use_int(x); // expected-error {{use of possibly uninitialized value: `x`}}
}

// Without the builtin: the error fires as usual.
_Safe void test_no_builtin(void) {
    int y;
    use_int(y); // expected-error {{use of uninitialized value: `y`}}
}

// Struct without builtin → error.
_Safe void test_struct_no_builtin(void) {
    struct Pair s;
    use_pair(s); // expected-error {{use of uninitialized value: `s`}}
}

// Array: decay (no &) doesn't mark as initialized.
_Safe void test_array_decay(void) {
    int arr[3];
    __builtin_assume_initialized(arr); // expected-error {{__builtin_assume_initialized requires '&' or '&_Mut' expression as argument}}
    use_int(arr[0]);
}
